# giron-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE_MIT  README.md  output.json
codepoint/: Cargo.toml
codepoint/src/: codepoint.rs  lib.rs
errors/: Cargo.toml
errors/src/: result.rs
estree/: Cargo.toml
estree/src/: estree.rs  lib.rs
giron/: Cargo.toml  README.md
giron-cli/: Cargo.toml
giron-wasm/: .gitignore  Cargo.toml  README.md
giron-wasm/src/: lib.rs
giron/src/: lib.rs
giron/src/errors/: errors.rs  mod.rs  result.rs
giron/src/estree/: estree.rs  mod.rs
giron/src/parser/: parser.rs  syntax.rs  test_static_semantics.rs
giron/src/scanner/: mod.rs  reader.rs  scanner.rs
giron/src/span/: span.rs
giron/src/token/: mod.rs  punctuators.rs  token.rs  value.rs
giron/tests/: test_parser.rs  test_static_semantics.rs
giron/tests/snippets/: CSVToArray.txt  UUIDGeneratorBrowser.txt  UUIDGeneratorNode.txt  allEqual.txt  any.txt  approximatelyEqual.txt  arrayToCSV.txt  ary.txt  atob.txt  averageBy.txt  bindAll.txt  binomialCoefficient.txt  bottomVisible.txt  call.txt  capitalize.txt  castArray.txt  chunk.txt  cloneRegExp.txt  collectInto.txt  compactWhitespace.txt  composeRight.txt  counter.txt  createDirIfNotExists.txt  createElement.txt  currentURL.txt  curry.txt  dayOfYear.txt  debounce.txt  decapitalize.txt  deepFlatten.txt  deepFreeze.txt  deepGet.txt  defaults.txt  degreesToRads.txt  differenceWith.txt  dig.txt  drop.txt  dropRightWhile.txt  dropWhile.txt  elementContains.txt  (+135 more)
parser/: Cargo.toml
parser/src/: lib.rs  parser.rs  syntax.rs
scanner/: Cargo.toml
scanner/src/: lib.rs  scanner.rs
span/: Cargo.toml
span/src/: lib.rs
src/: main.rs
tests/: test_parser.rs  test_scanner.rs
tests/snippets/: CSVToJSON.txt  JSONToFile.txt  JSONtoCSV.txt  RGBToHex.txt  URLJoin.txt  all.txt  arrayToHtmlList.txt  attempt.txt  average.txt  bifurcate.txt  bifurcateBy.txt  bind.txt  bindKey.txt  btoa.txt  byteSize.txt  capitalizeEveryWord.txt  chainAsync.txt  checkProp.txt  clampNumber.txt  coalesce.txt  coalesceFactory.txt  colorize.txt  compact.txt  compose.txt  converge.txt  copyToClipboard.txt  countBy.txt  countOccurrences.txt  createEventHub.txt  deepClone.txt  deepMapKeys.txt  defer.txt  delay.txt  detectDeviceType.txt  difference.txt  differenceBy.txt  digitize.txt  distance.txt  dropRight.txt  equals.txt  (+146 more)
token/: Cargo.toml
token/src/: token.rs  value.rs
tokenizer/: Cargo.toml
