[package]
name = "giron"
version = "0.1.0"
authors = ["Sanjeet N. Dasharath <sanjeetdasharath@gmail.com>"]
edition = "2018"


[workspace]

members = [
    "scanner",
    "parser",
    "estree",
    "errors",
    "tokenizer",
    "token",
    "codepoint",
    "span",
]


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
parser = { path = "./parser" }
token = { path = "./token" }
scanner = { path = "./scanner" }
estree = { path = "./estree" }
errors = { path = "./errors" }
span = { path = "./span" }