[package]
name = "giron"
version = "0.1.1"
authors = ["Sanjeet N. Dasharath <sanjeetdasharath@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/BlueBlazin/giron"
description = "ECMAScript parser which outputs ESTree JSON."
repository = "https://github.com/BlueBlazin/giron"
keywords = ["javascript", "ecmascript", "parser", "tokenizer", "js"]
categories = ["parser-implementations"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ucd = "0.1.1"

[dev-dependencies]
glob = "0.3.0"