[package]
name = "scanner"
version = "0.1.0"
authors = ["Sanjeet N. Dasharath <sanjeetdasharath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-ucd-ident = "0.9.0"
ucd = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
errors = { path = "../errors" }
token = { path = "../token" }
codepoint = { path = "../codepoint" }
